// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`string-concatanation.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
a {
  background-image: url($test-path + $test-path);
  background-image: url($test-path + 'static/test.jpg');
  background-image: url('../test/' + $test-path);
  background-image: url('../test/' + 'static/test.jpg');
  background-image: url($test-path+$test-path);
}

=====================================output=====================================
a {
  background-image: url($test-path + $test-path);
  background-image: url($test-path + "static/test.jpg");
  background-image: url("../test/" + $test-path);
  background-image: url("../test/" + "static/test.jpg");
  background-image: url($test-path + $test-path);
}

================================================================================
`;

exports[`string-concatanation.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
a {
  background-image: url($test-path + $test-path);
  background-image: url($test-path + 'static/test.jpg');
  background-image: url('../test/' + $test-path);
  background-image: url('../test/' + 'static/test.jpg');
  background-image: url($test-path+$test-path);
}

=====================================output=====================================
a {
  background-image: url($test-path + $test-path);
  background-image: url($test-path + "static/test.jpg");
  background-image: url("../test/" + $test-path);
  background-image: url("../test/" + "static/test.jpg");
  background-image: url($test-path + $test-path);
}

================================================================================
`;
